--- a/app-gateway/FbCommon/CMakeLists.txt
+++ b/app-gateway/FbCommon/CMakeLists.txt
@@ -1,7 +1,7 @@
 # If not stated otherwise in this file or this component's license file the
 # following copyright and licenses apply:
 #
-# Copyright 2020 RDK Management
+# Copyright 2025
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -15,21 +15,21 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-set(PLUGIN_NAME FbSettings)
+set(PLUGIN_NAME FbCommon)
 set(MODULE_NAME ${NAMESPACE}${PLUGIN_NAME})
 
 set(VERSION_MAJOR 1)
 set(VERSION_MINOR 0)
 set(VERSION_PATCH 0)
 
-add_compile_definitions(FBSETTINGS_MAJOR_VERSION=${VERSION_MAJOR})
-add_compile_definitions(FBSETTINGS_MINOR_VERSION=${VERSION_MINOR})
-add_compile_definitions(FBSETTINGS_PATCH_VERSION=${VERSION_PATCH})
+add_compile_definitions(FBCOMMON_MAJOR_VERSION=${VERSION_MAJOR})
+add_compile_definitions(FBCOMMON_MINOR_VERSION=${VERSION_MINOR})
+add_compile_definitions(FBCOMMON_PATCH_VERSION=${VERSION_PATCH})
 
 set(MODULE_VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH})
 
-set(PLUGIN_FBSETTINGS_STARTUPORDER "" CACHE STRING "To configure startup order of FbSettings plugin")
-set(PLUGIN_FBSETTINGS_AUTOSTART "false" CACHE STRING "Automatically start FbSettings plugin")
+set(PLUGIN_FBCOMMON_STARTUPORDER "" CACHE STRING "To configure startup order of FbCommon plugin")
+set(PLUGIN_FBCOMMON_AUTOSTART "false" CACHE STRING "Automatically start FbCommon plugin")
 
 message("Setup ${MODULE_NAME} v${MODULE_VERSION}")
 
@@ -38,24 +38,25 @@ find_package(${NAMESPACE}Definitions REQUIRED)
 find_package(CompileSettingsDebug CONFIG REQUIRED)
 
 add_library(${MODULE_NAME} SHARED
-        FbSettingsImplementation.cpp
-        FbSettings.cpp
-        Module.cpp)
-
+    FbCommonImplementation.cpp
+    FbCommon.cpp
+    Module.cpp
+    delegate/CommonDelegate.h
+)
 
 target_include_directories(${MODULE_NAME} PRIVATE ../helpers)
-# Allow includes like <interfaces/...> from the project root and common helpers
-target_include_directories(${MODULE_NAME} PRIVATE ..)
 target_include_directories(${MODULE_NAME} PRIVATE ../../Supporting_Files)
+# Allow includes like <interfaces/...> from the project root
+target_include_directories(${MODULE_NAME} PRIVATE ..)
 
 set_target_properties(${MODULE_NAME} PROPERTIES
-        CXX_STANDARD 11
-        CXX_STANDARD_REQUIRED YES)
+    CXX_STANDARD 11
+    CXX_STANDARD_REQUIRED YES)
 
 target_compile_definitions(${MODULE_NAME} PRIVATE MODULE_NAME=Plugin_${PLUGIN_NAME})
 
 target_link_libraries(${MODULE_NAME}
-        PRIVATE
+    PRIVATE
         CompileSettingsDebug::CompileSettingsDebug
         ${NAMESPACE}Plugins::${NAMESPACE}Plugins
         ${NAMESPACE}Definitions::${NAMESPACE}Definitions)
