--- a/app-gateway/AppGateway/appGatewayConfig.json
+++ b/app-gateway/AppGateway/appGatewayConfig.json
@@ -1,5 +1,6 @@
 {
     "paths": [
-        "/etc/app-gateway/resolution.integratedplayer.json"
+        "/etc/app-gateway/resolution.integratedplayer.json",
+        "/etc/app-gateway/resolution.fbcommon.json"
     ]
 }
