--- a/app-gateway/FbSettings/CMakeLists.txt
+++ b/app-gateway/FbSettings/CMakeLists.txt
@@ -44,6 +44,9 @@ add_library(${MODULE_NAME} SHARED
 
 
 target_include_directories(${MODULE_NAME} PRIVATE ../helpers)
+# Add Supporting_Files and project root to locate headers like UtilsJsonrpcDirectLink.h and <interfaces/...>
+target_include_directories(${MODULE_NAME} PRIVATE ../../Supporting_Files)
+target_include_directories(${MODULE_NAME} PRIVATE ..)
 
 set_target_properties(${MODULE_NAME} PROPERTIES
         CXX_STANDARD 11
