CheckPoint - cmf8e7ba8d

--- a/app-gateway/FbSettings/CMakeLists.txt
+++ b/app-gateway/FbSettings/CMakeLists.txt
@@ -68,4 +68,4 @@ add_compile_options(-Wall -Werror)
 install(TARGETS ${MODULE_NAME}
         DESTINATION lib/${STORAGE_DIRECTORY}/plugins)
 
-write_config(${PLUGIN_NAME})
+write_config(PLUGINS ${PLUGIN_NAME})
