--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Minimal preview server for app-gateway2. Starts a Node HTTP server that binds to 0.0.0.0 and PORT.",
   "main": "index.js",
   "scripts": {
+    "prestart": "npm run build",
     "start": "node index.js",
     "dev": "node index.js",
     "build": "node -e \"console.log('app-gateway2: nothing to build (static Node server)')\""
