--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "app-gateway2",
   "version": "1.0.0",
   "private": true,
-  "description": "Minimal preview server for app-gateway2. Starts a Node HTTP server that binds to 0.0.0.0 and PORT.",
-  "main": "index.js",
+  "description": "Minimal Express server for app-gateway2 preview/start validation.",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "engines": {
-    "node": ">=16"
+  "dependencies": {
+    "express": "^4.18.2"
   },
-  "license": "Apache-2.0"
+  "devDependencies": {
+    "nodemon": "^3.0.0"
+  }
 }
