Checkpoint 91 - cm2cb93127

--- a/app-gateway/OttServices/CMakeLists.txt
+++ b/app-gateway/OttServices/CMakeLists.txt
@@ -45,7 +45,7 @@ set(PLUGIN_IMPLEMENTATION ${MODULE_NAME}Implementation)
 
 find_program(GRPC_CPP_PLUGIN grpc_cpp_plugin REQUIRED)
 
-# Optional ott_token.proto integration (generates stubs/headers and exports OTT_TOKEN_GENERATED_* variables)
+# ott_token.proto integration (generates stubs/headers and exports OTT_TOKEN_GENERATED_* variables)
 include(cmake/ott_token.cmake)
 
 
@@ -125,22 +125,16 @@ set(OTTSERVICES_SOURCES
         permission_service.grpc.pb.cc
         Module.cpp)
 
-# Append generated ott_token sources if enabled
-if(OTTSERVICES_ENABLE_OTT_TOKEN)
-    list(APPEND OTTSERVICES_SOURCES
-        ${CMAKE_CURRENT_SOURCE_DIR}/ott_token.pb.cc
-        ${CMAKE_CURRENT_SOURCE_DIR}/ott_token.grpc.pb.cc)
-endif()
+# Append ott_token generated sources unconditionally
+list(APPEND OTTSERVICES_SOURCES
+    ${OTT_TOKEN_GENERATED_SRCS})
 
 add_library(${MODULE_NAME} SHARED ${OTTSERVICES_SOURCES})
 
 # Ensure the library depends on the protobuf generation
 add_dependencies(${MODULE_NAME} force_regenerate force_regenerate2)
-# Also depend on ott_token codegen if enabled
-if(OTTSERVICES_ENABLE_OTT_TOKEN)
-    add_dependencies(${MODULE_NAME} ott_token_codegen)
-    target_compile_definitions(${MODULE_NAME} PRIVATE OTTSERVICES_ENABLE_OTT_TOKEN)
-endif()
+# Also depend on ott_token codegen unconditionally
+add_dependencies(${MODULE_NAME} ott_token_codegen)
 
 
 target_include_directories(${MODULE_NAME} PRIVATE ../helpers ${GRPC_INCLUDE_DIRS})
