--- a/package.json
+++ b/package.json
@@ -1,20 +1,12 @@
 {
   "name": "app-gateway2",
   "version": "1.0.0",
-  "private": true,
-  "description": "Minimal Express server for app-gateway2 preview/start validation.",
+  "description": "Minimal Express web application for app-gateway2",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "express": "4.21.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.0"
-  },
-  "engines": {
-    "node": ">=18"
+    "express": "^4.18.2"
   }
 }
