--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "app-gateway2",
   "version": "1.0.0",
   "description": "app-gateway service",
-  "main": "server.js",
+  "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js",
+    "start:server": "node server.js",
+    "health": "node -e \"require('http').get({hostname:'127.0.0.1',port:process.env.PORT||3000,path:'/health'},res=>{console.log('status',res.statusCode);process.exit(res.statusCode===200?0:1)}).on('error',()=>process.exit(1))\""
   },
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
