--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "express": "^4.21.2"
   },
   "engines": {
-    "node": ">=16 <=22"
+    "node": ">=16 <23"
   },
   "keywords": [
     "gateway",
