--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "start:prod": "node server.js",
+    "start:preview": "node server.js",
     "serve": "node server.js"
   },
   "dependencies": {
